@@ -6,6 +6,7 @@ Changes in version 2.72 (this release) (2006-XX-XX).
 ------------------------------------------------------
 - All platforms: ARToolKit now supports querying of SDK and runtime versions.
 - All platforms: Support for AR_PIXEL_FORMAT_MONO is now included.
+- All platforms: There are now right-hand coordinate system versions of the OpenGL projection and modelview matrix functions, named arglCameraFrustumRH and arglCameraViewRH, respectively. These will help when integrating ARToolKit into existing OpenGL drawing.
 - Mac OS X: Fix for an error in the VRML library inclusion on Mac OS X.
 - Mac OS X: Now detects if running emulated on Intel Macs, and optimises video for this case.
 - Mac OS X: Two new video config tokens are now available; -fliph and -flipv, which will mirror the video image horizontally and vertically respectively.
